--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@ img {
   max-width: 100rem;
 }
 
+.text {
+  padding: 0 20px;
+}
+
 @media (max-width: 767px) { 
   .title {
     font-size: 4rem;
